--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
   cursor: pointer;
 }
 .top-bar, .progress-area .song-timer, 
-.controls, .music-list .header, .music-list ul li{
+.controls, .list .header, .list ul li{
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -176,7 +176,7 @@ body{
   position: absolute;
 }
 
-.music-list{
+.list{
   position: absolute;
   background: var(--white);
   width: 100%;
@@ -190,7 +190,7 @@ body{
   box-shadow: 0px -5px 10px rgba(0,0,0,0.1);
   transition: all 0.15s ease-out;
 }
-.music-list.show{
+.list.show{
   bottom: 0;
   opacity: 1;
   pointer-events: auto;
@@ -211,15 +211,15 @@ body{
   font-size: 22px;
   color: var(--lightblack);
 }
-.music-list ul{
+.list ul{
   margin: 10px 0;
   max-height: 260px;
   overflow: auto;
 }
-.music-list ul::-webkit-scrollbar{
+list ul::-webkit-scrollbar{
   width: 0px;
 }
-.music-list ul li{
+.list ul li{
   list-style: none;
   display: flex;
   cursor: pointer;
@@ -228,13 +228,13 @@ body{
   color: var(--lightblack);
   border-bottom: 1px solid #E5E5E5;
 }
-.music-list ul li:last-child{
+.list ul li:last-child{
   border-bottom: 0px;
 }
-.music-list ul li .row span{
+.list ul li .row span{
   font-size: 17px;
 }
-.music-list ul li .row p{
+.list ul li .row p{
   opacity: 0.9;
 }
 ul li .audio-duration{
